# electrophysiology_solver

./: CMakeLists.txt  CMakeLists.txt.gno  create_graph.hpp  ionic.cpp  ionic.hpp  ionic_nn.cpp  ionic_nn.hpp  ionic_params.prm  knn.hpp  monodomain.cpp  monodomainGNO.cpp  preprocess_data.py  restore_model.py  save_utils.hpp  torch_inference.cpp  torch_inference.hpp  train_GNO.py  train_GNO_u.py  train_GNO_uw.py  train_GNO_w.py
